--- a/www/package.json
+++ b/www/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
-    "isomorphic-unfetch": "3.0.0",
     "next": "^8.0.0-canary.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
+  "devDependencies": {
+    "cross-env": "^5.2.0"
+  },
   "scripts": {
-    "dev": "next",
+    "dev": "cross-env NOW_REGION=dev1 next",
     "now-build": "next build && next export -o dist"
   }
 }
