--- a/www/package.json
+++ b/www/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "copy-text-to-clipboard": "^2.1.0",
     "next": "^8.0.0-canary.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
@@ -9,6 +10,6 @@
   },
   "scripts": {
     "dev": "cross-env NOW_REGION=dev1 next",
-    "now-build": "next build && next export -o dist"
+    "now-build": "next build"
   }
 }
