--- a/now.json
+++ b/now.json
@@ -1,23 +1,3 @@
 {
-  "name": "kawaii-avatar",
-  "alias": "kawaii-avatar",
-  "version": 2,
-  "builds": [
-      { "src": "/www/package.json", "use": "@now/next" },
-      { "src": "/api/*.js", "use": "@now/node", "config": { "maxLambdaSize": "40mb" } },
-      { "src": "/static/*", "use": "@now/static" }
-  ],
-  "routes": [
-      {
-        "src": "/avatar",
-        "dest": "/api/avatar.js"
-      },
-      {
-        "src": "/icon.png",
-        "dest": "/static/icon.png"
-      },
-      {
-        "src": "/(.*)", "dest": "/www/$1"
-      }
-  ]
+  "version": 2
 }
